# bharat-legal-rag

./: .env.example  .gitignore  DEPLOY.md  HANDOFF.md  NEXT_STEPS.md  README.md  ROLLBACK.md  SESSION_HANDOFF.md  chunking-strategy.md  contextual-embeddings.md  docker-compose.yml  evals-strategy.md  insights-marketing.md  marker-pdf-docs.md
.claude/skills/: deploy.md
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: condense.py  config.py  dataset.py  db.py  embed.py  gateway.py  main.py  query.py  question_gen.py  rerank.py  retrieval.py
apps/api/app/prompts/: condense.txt
apps/api/scripts/: acme_spec.yaml  check_embed_asymmetry.py  check_pg_search_fusion.sh  eval_french_retrieval.py  eval_question_gen.py  gen_support_corpus.py  ingest.py  init.sql  scrape_support_sources.py  validate_sections.py
apps/web/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
corpus/clean/: BNS_2023.txt  BSA_2023.txt  DPDP_2023.txt  LAW_MAPPINGS.txt
demos/education/: manifest.yaml  validate_checks.yaml
demos/french/: STRATEGY.md  ingest_french.py  ingest_hooks.py  manifest.yaml  validate_checks.yaml
demos/health/: manifest.yaml  validate_checks.yaml
demos/insurance/: ingest_hooks.py  manifest.yaml  validate_checks.yaml
demos/law/: ingest_hooks.py  manifest.yaml  validate_checks.yaml  (+1 more)
golden_sets/: _build_french.py  _french_eval_iter.py  _smoke_test_french.py  education-dataset.csv  french-dataset.csv  french-v2-dataset.csv  health-dataset.csv  insurance-dataset.csv  law-dataset.csv  support-dataset.csv
scripts/: deploy.sh
(+104 files in other folders)
